--- a/g3-architects.html
+++ b/g3-architects.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>G3 Architects</title>
     <link rel="icon" type="" href="/images/icons/projects.png">
-    <link rel="stylesheet" href="/g3-architects.css" />
+    <link rel="stylesheet" href="/architects.css" />
   </head>
   <body>
     <!-- Page header -->
